# RK3506_LINUX_SDK

./: .gitignore  .gitmodules
app/lvgl_demo/: CMakeLists.txt  version.in
app/lvgl_demo/amp_monitor/: CMakeLists.txt  main.c  main.h
app/lvgl_demo/common/: kalman_filter.c  kalman_filter.h  ui_scaler.c  ui_scaler.h
app/lvgl_demo/flexbus/: CMakeLists.txt  main.c  main.h
app/lvgl_demo/gallery/: CMakeLists.txt  main.c
app/lvgl_demo/lv_demo/: CMakeLists.txt  main.c  main.h
app/lvgl_demo/lvgl8/: evdev.c  evdev.h  lv_port_disp.c  lv_port_disp.h  lv_port_indev.c  lv_port_indev.h  lv_port_init.c  lv_port_init.h
app/lvgl_demo/lvgl9/: evdev.c  evdev.h  lv_port_disp.c  lv_port_indev.c  lv_port_indev.h  lv_port_init.c
app/lvgl_demo/motor_demo/: CMakeLists.txt  main.c  main.h  ml_label.c  ml_label.h
app/lvgl_demo/motor_demo/deprecated/: main.c
app/lvgl_demo/rk_demo/wifibt/: wifi_server.c
app/lvgl_demo/tools/: astylerc  pre-commit
app/rkadk/: CMakeLists.txt  Kconfig
app/rkadk/cmake/: FindRkAiq.cmake
app/rkadk/examples/: CMakeLists.txt  SConscript  rkadk_aov_record_test.c  rkadk_disp_test.c  rkadk_media_test.c  rkadk_photo_test.c  rkadk_player_once_test.c  rkadk_player_test.c  rkadk_record_test.c  rkadk_rtmp_test.c  rkadk_rtsp_test.c  rkadk_setting_test.c  rkadk_storage_test.c  rkadk_stream_test.c  rkadk_thumb_test.c  rkadk_ui_test.c
app/rkadk/examples/common/isp/: sample_aiq_uapi1.c  sample_aiq_uapi2.c  sample_iio_aiq.c  sample_isp.h
app/rkadk/examples/common/isp/rv1103b/: sample_aiq_uapi2.c
app/rkadk/include/: rkadk_common.h  rkadk_hal.h  rkadk_log.h  rkadk_media_comm.h  rkadk_muxer.h  rkadk_param.h  rkadk_param_map.h  rkadk_photo.h  rkadk_platform_param.h  rkadk_player.h  rkadk_record.h  rkadk_rtmp.h  rkadk_rtsp.h  rkadk_stream.h  rkadk_ui.h  version.h
app/rkadk/inicfg/rk3576/: rkadk_defsetting_sensor_0.ini  rkadk_defsetting_sensor_1.ini
app/rkadk/inicfg/rv1106_1103/: rkadk_defsetting_sensor_0.ini  rkadk_setting_sensor_1.ini
app/rkadk/inicfg/rv1126_1109/: rkadk_defsetting_sensor_0.ini  rkadk_defsetting_sensor_1.ini
app/rkadk/src/: CMakeLists.txt  SConscript
app/rkadk/src/audio/decoder/: rkadk_audio_decoder.c  rkadk_audio_decoder_mp3.c
app/rkadk/src/common/: rkadk_log.c  rkadk_media_comm.c  rkadk_msg.c  rkadk_signal.h  rkadk_thread.c  rkadk_thumb_comm.c  rkadk_version.c
app/rkadk/src/demuxer/: rkadk_demuxer.c
app/rkadk/src/display/: rkadk_disp.c
app/rkadk/src/live/rtmp/: rkadk_rtmp.c
app/rkadk/src/live/rtsp/: rkadk_rtsp.c
app/rkadk/src/muxer/: rkadk_muxer.c
app/rkadk/src/osd/: rkadk_osd.c
app/rkadk/src/param/: rkadk_param.c  rkadk_struct2ini.c
app/rkadk/src/photo/: rkadk_photo.c
app/rkadk/src/player/: rkadk_player.c
app/rkadk/src/record/: rkadk_record.c
app/rkadk/src/stream/: rkadk_stream.c
app/rkadk/src/ui/: rkadk_ui.c
device/rockchip/: .gitignore  rk3506
device/rockchip/.chips/rk3506/: HZ-RK3506BTB_MiniEVM_EMMC_defconfig  HZ-RK3506BTB_MiniEVM_NAND_defconfig  HZ-RK3506BTB_MiniEVM_TF_defconfig  HZ-RK3506G2_MiniEVM_NAND_defconfig  HZ-RK3506G2_MiniEVM_TF_defconfig  HZ-RK3506SP_MiniEVM_EMMC_defconfig  HZ-RK3506SP_MiniEVM_NAND_defconfig  HZ-RK3506SP_MiniEVM_TF_defconfig  YJH-RK3506G2_MiniPDA_NAND_defconfig  amp_mcu.its  parameter-128M-amp.txt  parameter-128M-smp.txt  parameter-128M.txt  parameter-EMMC.txt  parameter-TF.txt  rockchip_rk3506_g_evb1_amp_defconfig  rockchip_rk3506_g_evb1_mcu_defconfig  rockchip_rk3506_g_evb2_defconfig  yocto.conf
device/rockchip/common/: README.md
device/rockchip/common/configs/: Config.in.debian  Config.in.yocto
device/rockchip/common/scripts/: build.sh  mk-kernel.sh  mk-rootfs.sh  post-fstab.sh  post-wifibt.sh
hal/doc/: Rockchip_User_Guide_HAL_CN.md
hal/doc/guides/: Rockchip_User_Guide_HAL_PCIe_CN.md  Rockchip_User_Guide_HAL_PCIe_EN.md
hal/lib/CMSIS/DSP/: cmsis_compiler.h  cmsis_gcc.h  core_hifi4.h
hal/lib/bsp/Koala/: hal_bsp.c
hal/lib/bsp/Pisces/: hal_bsp.c
hal/lib/bsp/RK1808/: hal_bsp.c
hal/lib/bsp/RK2106/: hal_bsp.c
hal/lib/bsp/RK2108/: hal_bsp.c
hal/lib/bsp/RK2118/: hal_bsp.c  hal_bsp.h  hal_spinlock_id.h
hal/lib/bsp/RK2206/: hal_bsp.c  hal_bsp.h
hal/lib/bsp/RK3308/: hal_bsp.c  hal_bsp.h
hal/lib/bsp/RK3358/: hal_bsp.c  hal_bsp.h
hal/lib/bsp/RK3506/: hal_bsp.c  hal_bsp.h
hal/lib/bsp/RK3562/: hal_bsp.c  hal_bsp.h
hal/lib/bsp/RK3568/: hal_bsp.c  hal_bsp.h
hal/lib/bsp/RK3576/: hal_bsp.c  hal_bsp.h
hal/lib/bsp/RK3588/: hal_bsp.c  hal_bsp.h
hal/lib/bsp/RV1103B/: hal_bsp.c  hal_bsp.h
hal/lib/bsp/RV1106/: hal_bsp.c
hal/lib/bsp/RV1126/: hal_bsp.c
hal/lib/bsp/Swallow/: hal_bsp.c
hal/lib/hal/inc/: hal_acdcdig_dsm.h  hal_acodec.h  hal_archtimer.h  hal_asrc.h  hal_audio.h  hal_base.h  hal_cache.h  hal_conf.h.template  hal_cru.h  hal_crypto.h  hal_debug.h  hal_def.h  hal_display.h  hal_dma.h  hal_driver.h  hal_dsmc_host.h  hal_dsmc_slave.h  hal_dw_mipi_dsi.h  hal_ehci.h  hal_facc.h  hal_flexbus.h  hal_flexbus_adc.h  hal_flexbus_dac.h  hal_flexbus_spi.h  hal_fspi.h  hal_gic.h  hal_gmac.h  hal_gpio.h  hal_gpio_irq_group.h  hal_hcd.h  hal_hyperpsram.h  hal_inno_mipi_dphy.h  hal_intmux.h  hal_irq_handler.h  hal_mbox.h  hal_npor.h  hal_otp.h  hal_pcd.h  hal_pcd_ex.h  hal_pci_core.h  (+27 more)
hal/lib/hal/src/: hal_acdcdig_dsm.c  hal_acdcdigv2.c  hal_asrc.c  hal_base.c  hal_cache.c  hal_canfd.c  hal_ddr_ecc.c  hal_debug.c  hal_dsmc_host.c  hal_dsmc_slave.c  hal_dwdma.c  hal_ehci.c  hal_ehci_iso.c  hal_facc.c  hal_fspi.c  hal_gic.c  hal_gpio.c  hal_gpio_irq_group.c  hal_hcd.c  hal_hwspinlock.c  hal_hyperpsram.c  hal_i2c.c  hal_intmux.c  hal_irq_handler.c  hal_mbox.c  hal_ohci.c  hal_otp.c  hal_pcd.c  hal_pcd_ex.c  hal_pci_core.c  hal_pcie.c  hal_pd.c  hal_pdm.c  hal_pwm.c  (+25 more)
hal/project/rk2118/: README.md  align_bin_size.sh  mkimage.sh  mkimage_keil.sh
hal/project/rk3506/: mkimage.sh
hal/project/rk3568-64/: mkimage.sh
hal/project/rk3576-64/: mkimage.sh
hal/project/rk3588/: mkimage.sh
hal/project/rk3588-64/: mkimage.sh
hal/project/rv1103/: mkimage.sh
hal/tools/: doxyfile_rk2118  doxyfile_rk3506  doxyfile_rk3562  doxyfile_rv1103b
rkbin/RKBOOT/: RK3506MINIALL.ini
(+279 files in other folders)
